# ChangeLog for dev-python/psycopg
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/psycopg/ChangeLog,v 1.175 2014/10/17 16:47:06 idella4 Exp $

*psycopg-2.5.4 (17 Oct 2014)

  17 Oct 2014; Ian Delaney <idella4@gentoo.org> +files/2.5.4-docbuild.patch,
  +psycopg-2.5.4.ebuild, psycopg-2.5.3.ebuild:
  bump; drop py2.6, patch to remove py3.2's objects.inv from doc build, upgrade
  doc build and install

*psycopg-2.5.3 (26 May 2014)

  26 May 2014; Patrick Lauer <patrick@gentoo.org> +psycopg-2.5.3.ebuild:
  Bump

  11 Apr 2014; Samuel Damashek <sdamashek@gentoo.org> psycopg-2.5.2.ebuild:
  Add python3_4 to 2.5.2 PYTHON_COMPAT

*psycopg-2.5.2 (14 Jan 2014)

  14 Jan 2014; Patrick Lauer <patrick@gentoo.org> +psycopg-2.5.2.ebuild:
  Bump

  29 Dec 2013; Akinori Hattori <hattya@gentoo.org> psycopg-2.5.1.ebuild:
  ia64 stable wrt bug #487872

  23 Dec 2013; Agostino Sarubbo <ago@gentoo.org> psycopg-2.5.1.ebuild:
  Stable for sparc, wrt bug #487872

  22 Dec 2013; Agostino Sarubbo <ago@gentoo.org> psycopg-2.5.1.ebuild:
  Stable for ppc64, wrt bug #487872

  21 Dec 2013; Agostino Sarubbo <ago@gentoo.org> psycopg-2.5.1.ebuild:
  Stable for ppc, wrt bug #487872

  04 Dec 2013; Matt Turner <mattst88@gentoo.org> psycopg-2.5.1.ebuild:
  alpha stable, bug 487872.

  02 Dec 2013; Johannes Huber <johu@gentoo.org> psycopg-2.5.1.ebuild:
  x86 stable, bug #487872

  23 Oct 2013; Markus Meier <maekke@gentoo.org> psycopg-2.5.1.ebuild:
  arm stable, bug #487872

  17 Oct 2013; Jeroen Roovers <jer@gentoo.org> psycopg-2.5.1.ebuild:
  Stable for HPPA (bug #487872).

  14 Oct 2013; Tony Vroon <chainsaw@gentoo.org> psycopg-2.5.1.ebuild:
  Marked stable on AMD64 based on arch tester report by Elijah "Armageddon" El
  Lazkani in bug #487872.

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> psycopg-1.1.21-r1.ebuild,
  psycopg-2.4.6-r1.ebuild, psycopg-2.4.6-r2.ebuild, psycopg-2.5.1.ebuild,
  psycopg-2.5.ebuild: