@@ -29,14 +29,14 @@ EBUILD psycopg-2.4.6.ebuild 2050 SHA256 d484f84b7e43b0338a0d1ec6aa1cf72bd21a4d30
 EBUILD psycopg-2.5.1.ebuild 1658 SHA256 31c44aa85d272b3d4444d077be1ea8e8e8c0cb6f2bb1c54a521447afc9919bc9 SHA512 3576406566586f4fb243d376f21b735579ad50c54e4fe95418986a99de398bea52e21e0b54f389f008452e910e4a6ead1081d8f5b7fd88974c891be3d3923e89 WHIRLPOOL e00791ca782aa1f70c0603c531710e4531d431d56451d6bde8ee8a72faa9e27eb028b2959da8a4c375f297f1a37d3850ea0e85e1adb73d5174f43710e876cc63
 EBUILD psycopg-2.5.2.ebuild 1673 SHA256 8f86733e0c600fa5dc9275e180f2a1ec90ac803eea5ccc760175a3618f8281a5 SHA512 29d90943a0afb689f1c648e8582227670322f0afe5ed7b9fff8dfe384df4868c04afb338b02f2d2e4e04e7551ad2c51d1d0fb8403c9d758465d44303233d67c0 WHIRLPOOL 92f4439605cdf9c4ba7a63d5a9d9bd3b8b6e3ec5c035cf76d96d8769caec7fab336153b07b7e1e654551563d9e502a23199fec11bea51e8e669db54100ba06be
 EBUILD psycopg-2.5.3.ebuild 1582 SHA256 67ebf03932efee7f88f72414c583bbe29593ef1738d2bf8ca26ad74758160373 SHA512 c868aba4e556236db3998521430212354fa7cc07a72e8a3e2c75c7230dbd9d145ca4a891a7a169d442f830fb9fd9c486748b548c120a730d1f2c471ef956d8b5 WHIRLPOOL 1f7ca85a99026b1f5413494afc37fcdb69f83187cea47f262feb1124d16d9362f45abfa40b246ce6fbf99afd9803d0f84a644fb1826b02157cca8840f66203f5
-EBUILD psycopg-2.5.4.ebuild 2023 SHA256 e42b0a279bc086a213872e7587e92f3df5c8edbf5c7d01cda43f016fb7775afa SHA512 f844907fe0a10411d2ac7f6514249503213e63730d2fc117f20a19db2321162091b5fee3db6c355725132d7e4d9ca95a407ed3d264b114c5604a38923bbdc30f WHIRLPOOL 4418e3b5556172b28cc2acee0c0144f438804e06fd69d64dccb8c4d9a837619a8093acae3f5f997aa12b09ad9bb60ab1cd85e284512a53bb52dd65dd2e193985
+EBUILD psycopg-2.5.4.ebuild 2064 SHA256 5f993aa10b35062f4d29e8e2359209ca037842f0d21313d58ba641830b10be74 SHA512 b42a7d97210e9b596fa245f137a96dc6e6e634993119095aaaaedf1b9e4c15251e308aafb68374a3ab4e47070fe2c802728f0c764b519e5fdcfbf8b1eee13a43 WHIRLPOOL 00a551e9f8b2d9fe201e8e7c8a331dba22d21dc7fd5abc1f0edb6d2286e840467fe1cf5a0268f9bc6b8d38c9f4fb9fa658d09ed0e5231300be161e942937d7ff
 EBUILD psycopg-2.5.ebuild 1712 SHA256 61290c2568fad1126128f26af0b6897596dc7ebd240f127bd6824d2891902b80 SHA512 09ec7788b9d3afb1705be22c9812d863ecea32a60ee1cc13dff02fd89cb16874086be86b4f6fd3fe49f0ab0fd898433d10e6fbde163542f3b42cfccf7121df87 WHIRLPOOL 341fd769cf4d6ef257ab78d46783169d6928f7a05c2732bde2be5a2466331c1882657603adcf5c754315b3e6739168decc75aa4c92bd02afa56d3d4bca3ff9d5
-MISC ChangeLog 22484 SHA256 9de310e069de4daf262b6e8381d36004efacf3188dd752567bd6a639c4c777fb SHA512 bb3f99ff244fbe5e5982a3097f91615a49930481e2cf8eb0ac2ed61dd3703229c6a5e84bf1cccc518f259f83c3127d2b42f23c1e441a4cd1d65bdbf83aca1cc0 WHIRLPOOL 26ec9e421bfcb344b2dc016566d6ec9cd37c025165c11200e5bdc599c4e8f5ec62ed3cbc267ecf78264fd7ddbecc02391deea18a9af5396436fc72e5d15f9b4d
+MISC ChangeLog 22591 SHA256 70ed52aa85871cb993cc64bd22f57eace1f8fd0b8601be66021ea35d6cec4f8b SHA512 f2e376a10e1656195832fb51aaff7a409856c6885b83ba813efc489ce3cdf46be50aabb1a3d7fe77c290dc817c940989993e1b06374d9e518d4c9b9164159726 WHIRLPOOL ea6262917b6beb0d84851787abcef0a79edbd7633e07ded7a3d5d322e638278f88179842045d336a2d70c2071baafe5ab448c51848a701ba9999728e2ed3340e
 MISC metadata.xml 366 SHA256 3c1239649781491e78ba63077192460561be54da50d7527d593ad5bc1e74a04c SHA512 43884ab75f4e267af02cd0dae3e3b853232e6b059973b9e821da262beaea95aa0a06ad34fa4f88a5727dfaa56dfc06618a4f92675c3ce89fcbefbad9b638c6d5 WHIRLPOOL 9a0a2eaa778b6c059f0392603f6aa3e983037f9a94a4dda029431d22816306b6cf0c84cd209654a8afb76fb126abebd7238009011d0eac6576ae028a9bce9289
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlRBSBsACgkQso7CE7gHKw1ZcACfbtfiRcnhndhTI/XjM3PaMif0
-ml8AoIvrbtsDsm9SqDswxpceIdRAy6er
-=RoBW
+iEYEAREIAAYFAlRCbI8ACgkQso7CE7gHKw0+bQCfQsjmY5kCKcp39rPxMNC/xcsH
+btwAoJnObsKcsKRo/XAmZ1HxmJoV9HsF
+=qtqq
 -----END PGP SIGNATURE-----
