@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/psycopg
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/psycopg/ChangeLog,v 1.175 2014/10/17 16:47:06 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/psycopg/ChangeLog,v 1.176 2014/10/18 13:34:53 idella4 Exp $
+
+  18 Oct 2014; Ian Delaney <idella4@gentoo.org> psycopg-2.5.4.ebuild:
+  add python-docs dep for doc build
 
 *psycopg-2.5.4 (17 Oct 2014)
 
